Сделана процедура проверки наличия у водителей недопустимых рейсов, сортировка списка маршрутов при просмотре расписания